--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -8,10 +8,11 @@
     {% for recipe in recipes %}
     <div class="row">
         <div class="col-lg-4 col-sm-6 mb-4">
-            <!-- recipe item 1-->
+            
             <div class="portfolio-item">
-                <a role="button" class="btn btn-outline-primary" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">Edit Recipe</a>
-
+                {% if session.user|lower == recipe.created_by|lower %}        <!-- if statement only shows edit recipe buttons to the user that created the recipe-->
+                    <a role="button" class="btn btn-outline-primary" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">Edit Recipe</a>
+                {% endif %}
                 <a class="portfolio-link" data-bs-toggle="modal" href="">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
