--- a/templates/base.html
+++ b/templates/base.html
@@ -21,22 +21,22 @@
     <header>
             <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
                 <div class="container">
-                    <a class="navbar-brand" href="{{ url_for('home') }}"><img src="static/assets/img/Simmer-logo.png" alt="..." /></a>
+                    <a class="navbar-brand" href="{{ url_for('home') }}"><img src="../static/assets/img/simmer_logo.png" alt="..." /></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         Menu
                         <i class="fas fa-bars ms-1"></i>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                            <li><a href="{{ url_for('home') }}">Home</a></li>
+                            <li><a class="btn btn-primary" role="button" href="{{ url_for('home') }}">Home </a></li>
                             {% if session.user %}
-                                <li><a href="{{ url_for('profile', username=session["user"]) }}">Profile</a></li>
-                                <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
-                                <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-                                <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                                <li><a class="btn btn-primary" role="button" href="{{ url_for('profile', username=session["user"]) }}">Profile </a></li>
+                                <li><a class="btn btn-primary" role="button" href="{{ url_for('get_recipes') }}">Recipes </a></li>
+                                <li><a class="btn btn-primary" role="button" href="{{ url_for('add_recipe') }}">Add Recipe </a></li>
+                                <li><a class="btn btn-primary" role="button" href="{{ url_for('logout') }}">Logout </a></li>
                             {% else %}
-                                <li><a href="{{ url_for('login') }}">Login</a></li>
-                                <li><a href="{{ url_for('register') }}">Register</a></li>
+                                <li><a class="btn btn-primary" role="button" href="{{ url_for('login') }}">Login </a></li>
+                                <li><a class="btn btn-primary" role="button" href="{{ url_for('register') }}">Register </a></li>
                             {% endif %}
                         </ul>
                     </div>
@@ -63,6 +63,20 @@
         {% block content %}
         {% endblock %}
     </main>
+
+    
+    
+    <footer class="footer py-4 ">
+        <div class="container navbar-fixed-bottom">
+            <div class="row align-items-center">
+                <div class="col-lg-4 text-lg-start">Copyright &copy; Callum Jepps 2021</div>
+                <div class="col-lg-4 my-3 my-lg-0">
+                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/CJepps/Simmer-recipe-sharing"><i class="fab fa-github"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="www.linkedin.com/in/callum-jepps-a4a8b3101"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
     
      <!-- Bootstrap core JS-->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
