--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,15 +1,5 @@
-@charset "UTF-8";
-/*!
-* Start Bootstrap - Agency v7.0.9 (https://startbootstrap.com/theme/agency)
-* Copyright 2013-2021 Start Bootstrap
-* Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-agency/blob/master/LICENSE)
-*/
-/*!
- * Bootstrap v5.1.3 (https://getbootstrap.com/)
- * Copyright 2011-2021 The Bootstrap Authors
- * Copyright 2011-2021 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
+@charset "UTF-8";     /* css file from https://startbootstrap.com/theme/agency
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
