--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-    <header>
+    <header>                                                                            <!--navbar adapted from https://startbootstrap.com/theme/agency-->
             <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
                 <div class="container">
                     <div class="simmer-logo">
