--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11787,8 +11787,7 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   background-color: #101214;
-  position:absolute;
-  width:100%;   
+  width:100%;
 }
 
 
@@ -11826,11 +11825,9 @@ form {
 }
 
 
-.card-body {
-  
-}
-
 main.container-fluid {
+  margin-top: 20vh;
+  margin-bottom: 10vh;
   height: auto;
 }
 
