--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav text-uppercase ms-auto px-4 py-lg-0">
-                            <li><a class="btn btn-primary" role="button" href="{{ url_for('home') }}">Home </a></li>
+                            <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('home') }}">Home </a></li>
                             {% if session.user %}
                                 <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('profile', username=session["user"])}}">Profile </a></li>
                                 <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('get_recipes') }}">Recipes </a></li>
