--- a/templates/profile.html
+++ b/templates/profile.html
@@ -23,12 +23,15 @@
               {% for user_recipe in user_recipes %}
                 <div class="col-sm-12 col-md-6 my-3">
                     <div class="card ">
+                      <a href="{{ url_for('recipe', recipe_id=user_recipe._id) }}">
                         <img src="{{ user_recipe.recipe_image_url }}" alt="Recipe Image" class="img-fluid">
+                      </a>  
                         <div>
                             <h6 class="card_title">{{ user_recipe.recipe_title }}</h6>   
                         </div>
                     </div>
                 </div>
+                
                 {% else %}
                 <div class="col-sm-12 col-md-6">
                   <h3 class="heading mb-5">Looks like you haven't created any recipes yet.</h3>
