--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container px-0 recipe_container">
-    <div class="row align-items-start py-5">
+    <div class="row align-items-start py-5 recipe-header">
         <div class="col-md-6 text-center">
             <!--Recipe Name-->
             <h1 class="heading-primary">{{ recipe.recipe_title }}</h1>
