--- a/templates/base.html
+++ b/templates/base.html
@@ -1,65 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href={{url_for('static', filename='css/styles.css')}}>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="static/assets/favicon/favicon.ico" />
-    
+
+
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-    
-    
+
+
     <title>Simmer</title>
 </head>
+
 <body>
 
-    <header>                                                                            <!--navbar adapted from https://startbootstrap.com/theme/agency-->
-            <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-                <div class="container">
-                    <div class="simmer-logo">
-                        <a class="navbar-brand" href="{{ url_for('home') }}">
-                            <i class="fas fa-utensils fa-2x"></i>
-                            <h1 id="simmer-logo-text">SIMMER</h1>
-                        </a> 
-                    </div>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" 
-                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                        Menu
-                        <i class="fas fa-bars ms-1"></i>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarResponsive">
-                        <ul class="navbar-nav text-uppercase ms-auto px-4 py-lg-0">
-                            <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('home') }}">Home </a></li>
-                            {% if session.user %}
-                                <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('profile', username=session["user"])}}">Profile </a></li>
-                                <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('get_recipes') }}">Recipes </a></li>
-                                <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('add_recipe') }}">Add Recipe </a></li>
-                                <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('logout') }}">Logout </a></li>
-                            {% else %}
-                                <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('login') }}">Login </a></li>
-                                <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('register') }}">Register </a></li>
-                            {% endif %}
-                        </ul>
-                    </div>
+    <header>
+        <!--navbar adapted from https://startbootstrap.com/theme/agency-->
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+            <div class="container">
+                <div class="simmer-logo">
+                    <a class="navbar-brand" href="{{ url_for('home') }}">
+                        <i class="fas fa-utensils fa-2x"></i>
+                        <h1 id="simmer-logo-text">SIMMER</h1>
+                    </a>
                 </div>
-            </nav>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars ms-1"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav text-uppercase ms-auto px-4 py-lg-0">
+                        <li><a class="btn btn-primary mx-lg-1 nav-button" role="button"
+                                href="{{ url_for('home') }}">Home </a></li>
+                        {% if session.user %}
+                        <li><a class="btn btn-primary mx-lg-1 nav-button" role="button"
+                                href="{{ url_for('profile', username=session["user"])}}">Profile </a></li>
+                        <li><a class="btn btn-primary mx-lg-1 nav-button" role="button"
+                                href="{{ url_for('get_recipes') }}">Recipes </a></li>
+                        <li><a class="btn btn-primary mx-lg-1 nav-button" role="button"
+                                href="{{ url_for('add_recipe') }}">Add Recipe </a></li>
+                        <li><a class="btn btn-primary mx-lg-1 nav-button" role="button"
+                                href="{{ url_for('logout') }}">Logout </a></li>
+                        {% else %}
+                        <li><a class="btn btn-primary mx-lg-1 nav-button" role="button"
+                                href="{{ url_for('login') }}">Login </a></li>
+                        <li><a class="btn btn-primary mx-lg-1 nav-button" role="button"
+                                href="{{ url_for('register') }}">Register </a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <div>
         <!--flash messages-->
         {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages %}
-                    <div class = "row flash">
-                        <h4 class="center-align d-flex justify-content-center">{{ message }}</h4>
-                    </div>
-                {% endfor %}
-            {% endif %}        
+        {% if messages %}
+        {% for message in messages %}
+        <div class="row flash">
+            <h4 class="center-align d-flex justify-content-center">{{ message }}</h4>
+        </div>
+        {% endfor %}
+        {% endif %}
         {% endwith%}
     </div>
 
@@ -70,25 +81,29 @@
         {% endblock %}
     </main>
 
-    
-    
+
+
     <footer class="footer py-4">
         <div class="container navbar-fixed-bottom">
             <div class="row align-items-center">
                 <div class="col-lg-4 text-lg-start" style="color: white;">Copyright &copy; Callum Jepps 2021</div>
                 <div class="col-lg-4 my-3 my-lg-0">
-                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/CJepps/Simmer-recipe-sharing"><i class="fab fa-github"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/callum-jepps-a4a8b3101/"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/CJepps/Simmer-recipe-sharing"><i
+                            class="fab fa-github"></i></a>
+                    <a class="btn btn-dark btn-social mx-2"
+                        href="https://www.linkedin.com/in/callum-jepps-a4a8b3101/"><i
+                            class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
     </footer>
-    
-     <!-- Bootstrap core JS-->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-     <!-- Core theme JS-->
-     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
-    
-    
+
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+
+
 </body>
+
 </html>
